# mrsmap-ros

./: CMakeLists.txt  README.md  package.xml
cmake/Modules/: FindMRSMap.cmake
include/mrsmap/map/: multiresolution_csurfel_map.h
include/mrsmap/registration/: multiresolution_csurfel_registration.h
include/mrsmap/slam/: slam.h
include/mrsmap/utilities/: ros_helper.h  utilities.h
include/mrsmap/visualization/: visualization_map.h  visualization_slam.h
src/apps/: evaluate_pose_tracking.cpp  evaluate_slam.cpp  evaluate_visual_odometry.cpp  mrsslam_app.cpp  train_objectmap.cpp
src/map/: multiresolution_csurfel_map.cpp
src/registration/: multiresolution_csurfel_registration.cpp
src/slam/: slam.cpp
src/utilities/: ros_helper.cpp  utilities.cpp
src/visualization/: visualization_map.cpp  visualization_slam.cpp
